@@ -594,7 +594,7 @@ public class DefinitionLogic extends WFCommonLogic {
 
         @Override
         public Long getIdentifiableId() {
-            return new Long(deploymentName.hashCode());
+            return Long.valueOf(deploymentName.hashCode());
         }
 
         @Override
@@ -607,7 +607,7 @@ public class DefinitionLogic extends WFCommonLogic {
         }
     }
 
-    private final class StartProcessPermissionCheckCallback implements CheckMassPermissionCallback {
+    private static final class StartProcessPermissionCheckCallback implements CheckMassPermissionCallback {
         private final List<WfDefinition> result;
         private final Map<Deployment, ProcessDefinition> processDefinitions;
 
