@@ -86,7 +86,7 @@ public class FormulaActionHandlerOperations {
             return new Double(((Number) o1).doubleValue() + ((Number) o2).doubleValue());
         }
         if (Long.class.isInstance(o1) && Long.class.isInstance(o2)) {
-            return new Long((long) (((Long) o1).doubleValue() + ((Long) o2).doubleValue()));
+            return Long.valueOf((long) (((Long) o1).doubleValue() + ((Long) o2).doubleValue()));
         }
         if (Date.class.isInstance(o1) && Number.class.isInstance(o2)) {
             return new Date(((Date) o1).getTime() + (long) (((Number) o2).doubleValue() * 60 * 1000));
@@ -121,13 +121,13 @@ public class FormulaActionHandlerOperations {
             return new Double(((Number) o1).doubleValue() - ((Number) o2).doubleValue());
         }
         if (Long.class.isInstance(o1) && Long.class.isInstance(o2)) {
-            return new Long((long) (((Number) o1).doubleValue() - ((Number) o2).doubleValue()));
+            return Long.valueOf((long) (((Number) o1).doubleValue() - ((Number) o2).doubleValue()));
         }
         if (Date.class.isInstance(o1) && Number.class.isInstance(o2)) {
             return new Date(((Date) o1).getTime() - (long) (((Number) o2).doubleValue() * 60 * 1000));
         }
         if (Date.class.isInstance(o1) && Date.class.isInstance(o2)) {
-            return new Long((((Date) o1).getTime() - ((Date) o2).getTime()) / 60000);
+            return Long.valueOf((((Date) o1).getTime() - ((Date) o2).getTime()) / 60000);
         }
         log.error("Cannot make substraction for " + o1.getClass() + " with " + o2.getClass());
         return null;
@@ -147,7 +147,7 @@ public class FormulaActionHandlerOperations {
             return new Double(((Number) o1).doubleValue() * ((Number) o2).doubleValue());
         }
         if (Long.class.isInstance(o1) && Long.class.isInstance(o2)) {
-            return new Long((long) (((Number) o1).doubleValue() * ((Number) o2).doubleValue()));
+            return Long.valueOf((long) (((Number) o1).doubleValue() * ((Number) o2).doubleValue()));
         }
         log.error("Cannot make multiplication for " + (o1 != null ? o1.getClass() : "null") + " with " + (o2 != null ? o2.getClass() : "null"));
         return null;
@@ -164,7 +164,7 @@ public class FormulaActionHandlerOperations {
             return new Double(((Double) o1).doubleValue() / ((Number) o2).doubleValue());
         }
         if (Long.class.isInstance(o1) && Number.class.isInstance(o2)) {
-            return new Long((long) (((Long) o1).doubleValue() / ((Number) o2).doubleValue()));
+            return Long.valueOf((long) (((Long) o1).doubleValue() / ((Number) o2).doubleValue()));
         }
         log.error("Cannot make division for " + o1.getClass() + " with " + o2.getClass());
         return null;
@@ -178,7 +178,7 @@ public class FormulaActionHandlerOperations {
             return new Double(-((Double) o).doubleValue());
         }
         if (Long.class.isInstance(o)) {
-            return new Long(-((Long) o).longValue());
+            return Long.valueOf(-((Long) o).longValue());
         }
         log.error("Cannot make changeSign for " + o.getClass());
         return null;
@@ -186,7 +186,7 @@ public class FormulaActionHandlerOperations {
 
     public Object not(Object o) {
         if (Boolean.class.isInstance(o)) {
-            return new Boolean(!((Boolean) o).booleanValue());
+            return !(Boolean)o;
         }
         log.error("Cannot make not for " + o.getClass());
         return null;
@@ -200,22 +200,25 @@ public class FormulaActionHandlerOperations {
             return asBigDecimal((Number) o1).compareTo((BigDecimal) o2) < 0;
         }
         if (Double.class.isInstance(o1) && Double.class.isInstance(o2)) {
-            return new Boolean(((Double) o1).doubleValue() < ((Double) o2).doubleValue());
+            return Boolean.valueOf(((Double) o1).doubleValue() < ((Double) o2).doubleValue());
         }
         if (Double.class.isInstance(o1) && Long.class.isInstance(o2)) {
-            return new Boolean(((Double) o1).doubleValue() < ((Long) o2).doubleValue());
+            return Boolean.valueOf(((Double) o1).doubleValue() < ((Long) o2).doubleValue());
         }
         if (Long.class.isInstance(o1) && Double.class.isInstance(o2)) {
-            return new Boolean(((Long) o1).doubleValue() < ((Double) o2).doubleValue());
+            return Boolean.valueOf(((Long) o1).doubleValue() < ((Double) o2).doubleValue());
         }
         if (Long.class.isInstance(o1) && Long.class.isInstance(o2)) {
-            return new Boolean(((Long) o1).longValue() < ((Long) o2).longValue());
+            return Boolean.valueOf(((Long) o1).longValue() < ((Long) o2).longValue());
         }
         if (String.class.isInstance(o1) && String.class.isInstance(o2)) {
-            return new Boolean(((String) o1).compareTo((String) o2) < 0);
+            return Boolean.valueOf(((String) o1).compareTo((String) o2) < 0);
         }
         if (Date.class.isInstance(o1) && Date.class.isInstance(o2)) {
-            return new Boolean(((Date) o1).compareTo((Date) o2) < 0);
+            return Boolean.valueOf(((Date) o1).compareTo((Date) o2) < 0);
+        }
+        if (BigDecimal.class.isInstance(o1) && BigDecimal.class.isInstance(o2)) {
+        	return Boolean.valueOf(((BigDecimal)o1).compareTo((BigDecimal)o2) < 0);
         }
         log.error("Cannot make less for " + o1.getClass() + " with " + o2.getClass());
         return null;
@@ -227,9 +230,9 @@ public class FormulaActionHandlerOperations {
 
     public Object equal(Object o1, Object o2) {
         if (BigDecimal.class.isInstance(o1) && BigDecimal.class.isInstance(o2)) {
-            return new Boolean(((BigDecimal) o1).compareTo((BigDecimal) o2) == 0);
+            return Boolean.valueOf(((BigDecimal) o1).compareTo((BigDecimal) o2) == 0);
         }
-        return new Boolean(o1.equals(o2));
+        return Boolean.valueOf(o1.equals(o2));
     }
 
     public Object lessOrEqual(Object o1, Object o2) {
@@ -246,7 +249,7 @@ public class FormulaActionHandlerOperations {
 
     public Object or(Object o1, Object o2) {
         if (Boolean.class.isInstance(o1) && Boolean.class.isInstance(o2)) {
-            return new Boolean(((Boolean) o1).booleanValue() || ((Boolean) o2).booleanValue());
+            return (Boolean) o1 || (Boolean) o2;
         }
         log.error("Cannot make or for " + o1.getClass() + " with " + o2.getClass());
         return null;
@@ -254,7 +257,7 @@ public class FormulaActionHandlerOperations {
 
     public Object and(Object o1, Object o2) {
         if (Boolean.class.isInstance(o1) && Boolean.class.isInstance(o2)) {
-            return new Boolean(((Boolean) o1).booleanValue() && ((Boolean) o2).booleanValue());
+            return (Boolean) o1 && (Boolean) o2;
         }
         log.error("Cannot make and for " + o1.getClass() + " with " + o2.getClass());
         return null;
@@ -262,7 +265,7 @@ public class FormulaActionHandlerOperations {
 
     public Object xor(Object o1, Object o2) {
         if (Boolean.class.isInstance(o1) && Boolean.class.isInstance(o2)) {
-            return new Boolean(((Boolean) o1).booleanValue() ^ ((Boolean) o2).booleanValue());
+            return (Boolean) o1 ^ (Boolean) o2;
         }
         log.error("Cannot make xor for " + o1.getClass() + " with " + o2.getClass());
         return null;
@@ -274,12 +277,12 @@ public class FormulaActionHandlerOperations {
             Calendar calendar = new GregorianCalendar();
             calendar.setTime(date);
             if (calendar.get(Calendar.YEAR) == 1970 && calendar.get(Calendar.MONTH) == Calendar.JANUARY && calendar.get(Calendar.DAY_OF_MONTH) == 1) {
-                return CalendarUtil.format(date, CalendarUtil.HOURS_MINUTES_FORMAT);
+                return CalendarUtil.format(date, CalendarUtil.HOURS_MINUTES_FORMAT_STR);
             }
             if (calendar.get(Calendar.HOUR) == 0 && calendar.get(Calendar.MINUTE) == 0 && calendar.get(Calendar.SECOND) == 0) {
-                return CalendarUtil.format(date, CalendarUtil.DATE_WITHOUT_TIME_FORMAT);
+                return CalendarUtil.format(date, CalendarUtil.DATE_WITHOUT_TIME_FORMAT_STR);
             }
-            return CalendarUtil.format(date, CalendarUtil.DATE_WITH_HOUR_MINUTES_FORMAT);
+            return CalendarUtil.format(date, CalendarUtil.DATE_WITH_HOUR_MINUTES_FORMAT_STR);
         }
         if (Date.class.isAssignableFrom(c) && Date.class.isInstance(o)) {
             return o;
@@ -306,8 +309,8 @@ public class FormulaActionHandlerOperations {
         }
         Date d = (Date) p;
         try {
-            String s = CalendarUtil.format(d, CalendarUtil.HOURS_MINUTES_FORMAT);
-            return CalendarUtil.convertToDate(s, CalendarUtil.HOURS_MINUTES_FORMAT);
+            String s = CalendarUtil.format(d, CalendarUtil.HOURS_MINUTES_FORMAT_STR);
+            return CalendarUtil.convertToDate(s, CalendarUtil.HOURS_MINUTES_FORMAT_STR);
         } catch (Exception e) {
             log.warn("Unparseable time", e);
         }
@@ -324,7 +327,7 @@ public class FormulaActionHandlerOperations {
         if (hours * 60 < minutes) {
             hours++;
         }
-        return new Long(hours * 60);
+        return Long.valueOf(hours * 60);
     }
 
     public Long roundUpFunction(double d) {
@@ -457,12 +460,8 @@ public class FormulaActionHandlerOperations {
                                     zd = 9;
                                 }
                             }
-                        } else {
-                            boolean b3 = "ой ый".indexOf(suf2) >= 0 && wordType > 4 && !word.substring(len - 4, len).equals("опой") || zb > 10
-                                    && za > 16;
-                            if (b3) {
-                                zd = 8;
-                            }
+                        } else if (zb > 10 && za > 16) {
+                            zd = 8;
                         }
                     }
                 }
@@ -603,33 +602,33 @@ public class FormulaActionHandlerOperations {
         String name = st.hasMoreElements() ? st.nextToken() : "";
         String parent = st.hasMoreElements() ? st.nextToken() : "";
 
-        String answer = "";
+        StringBuilder answer = new StringBuilder();
         for (char c : mode.toCharArray()) {
             switch (c) {
             case 'F':
-                answer += wordCaseRussian(family, caseNumber, sex, 1, false);
+                answer.append(wordCaseRussian(family, caseNumber, sex, 1, false));
                 break;
             case 'I':
-                answer += wordCaseRussian(name, caseNumber, sex, 2, false);
+                answer.append(wordCaseRussian(name, caseNumber, sex, 2, false));
                 break;
             case 'O':
-                answer += wordCaseRussian(parent, caseNumber, sex, 3, false);
+                answer.append(wordCaseRussian(parent, caseNumber, sex, 3, false));
                 break;
             case 'f':
-                answer += wordCaseRussian(family, caseNumber, sex, 1, true);
+                answer.append(wordCaseRussian(family, caseNumber, sex, 1, true));
                 break;
             case 'i':
-                answer += wordCaseRussian(name, caseNumber, sex, 2, true);
+                answer.append(wordCaseRussian(name, caseNumber, sex, 2, true));
                 break;
             case 'o':
-                answer += wordCaseRussian(parent, caseNumber, sex, 3, true);
+                answer.append(wordCaseRussian(parent, caseNumber, sex, 3, true));
                 break;
             default:
-                answer += c;
+                answer.append(c);
             }
         }
 
-        return answer;
+        return answer.toString();
     }
 
     private BigDecimal asBigDecimal(Number n) {
